Fixed the Button spacing to account for Responsive.

--- a/sass/partials/_button-block.scss
+++ b/sass/partials/_button-block.scss
@@ -1,6 +1,11 @@
 /* General / Cell Phone */
+.button-block {
+  margin-bottom: 0;
+}
+
 .button-block__link {
   width: 100%;
+  margin-bottom: 15px;
   padding: 20px 0 0;
   list-style: none;
   color: $attention-gold;
